Switch from APL2 to MIT license
Per most other GDS open source code. This is hardcoded into the `Modulefile`
for two reasons:

1. It can't simply be changed by modifying the metadata config because it
   needs to match the file/template in the skeleton.
2. The default is APL2 which conflicts with the template.

--- a/skeleton/Modulefile.erb
+++ b/skeleton/Modulefile.erb
@@ -2,7 +2,7 @@ name          '<%= metadata.full_module_name %>'
 version       '0.0.1'
 source        '<%= metadata.source %>'
 author        '<%= metadata.author %>'
-license       '<%= metadata.license %>'
+license       'MIT',
 summary       '<%= metadata.summary %>'
 description   '<%= metadata.description %>'
 project_page  '<%= metadata.project_page %>'
