--- a/skeleton/manifests/params.pp.erb
+++ b/skeleton/manifests/params.pp.erb
@@ -1,15 +1,17 @@
 # == Class <%= metadata.name %>::params
 #
 # This class is meant to be called from <%= metadata.name %>
-# It set variable according to platform
+# It sets variables according to platform
 #
 class <%= metadata.name %>::params {
   case $::osfamily {
     'Debian': {
-      $service_provider = upstart
+      $package_name = '<%= metadata.name %>'
+      $service_name = '<%= metadata.name %>'
     }
     'RedHat', 'Amazon': {
-      $service_provider = redhat
+      $package_name = '<%= metadata.name %>'
+      $service_name = '<%= metadata.name %>'
     }
     default: {
       fail("${::operatingsystem} not supported")
