--- a/skeleton/manifests/service.pp.erb
+++ b/skeleton/manifests/service.pp.erb
@@ -4,11 +4,10 @@
 # It ensure the service is running
 #
 class <%= metadata.name %>::service {
-  service { '<%= metadata.name %>':
+  service { $<%= metadata.name %>::params::service_name:
     ensure     => running,
     enable     => true,
     hasstatus  => true,
     hasrestart => true,
-    provider   => $<%= metadata.name %>::params::service_provider,
   }
 }
