pick a few of the changes we made at work back into my fork

--- a/skeleton/manifests/install.pp.erb
+++ b/skeleton/manifests/install.pp.erb
@@ -1,4 +1,9 @@
 # == Class <%= metadata.name %>::intall
 #
 class <%= metadata.name %>::install {
+  include <%= metadata.name %>::params
+
+  package { $<%= metadata.name %>::params::package_name:
+    ensure => present,
+  }
 }
