--- a/skeleton/manifests/init.pp.erb
+++ b/skeleton/manifests/init.pp.erb
@@ -8,12 +8,22 @@
 #   Explanation of what this parameter affects and what it defaults to.
 #
 class <%= metadata.name %> (
+  $package_name = $<%=metadata.name %>::params::package_name,
+  $service_name = $<%=metadata.name %>::params::service_name
 ) inherits <%= metadata.name %>::params {
 
   # validate parameters here
 
-  class { '<%= metadata.name %>::install': } ->
-  class { '<%= metadata.name %>::config': } ~>
-  class { '<%= metadata.name %>::service': } ->
+  class { '<%= metadata.name %>::install':
+    package_name  => $package_name,  
+  }
+
+  class { '<%= metadata.name %>::service':
+    service_name  => $service_name,
+  }
+  
+  Class['<%= metadata.name %>::install'] ->
+  Class['<%= metadata.name %>::config'] ~>
+  Class['<%= metadata.name %>::service'] ->
   Class['<%= metadata.name %>']
 }
