--- a/skeleton/manifests/params.pp.erb
+++ b/skeleton/manifests/params.pp.erb
@@ -5,16 +5,12 @@
 #
 class <%= metadata.name %>::params {
   case $::osfamily {
-    'Debian': {
-      $package_name = '<%= metadata.name %>'
-      $service_name = '<%= metadata.name %>'
-    }
-    'RedHat', 'Amazon': {
+    'RedHat': {
       $package_name = '<%= metadata.name %>'
       $service_name = '<%= metadata.name %>'
     }
     default: {
-      fail("${::operatingsystem} not supported")
+      fail("${::operatingsystem} (${::osfamily}) not supported")
     }
   }
 }
