Install.pp.erb does not write the right class name
Write install instead of intall

--- a/skeleton/manifests/install.pp.erb
+++ b/skeleton/manifests/install.pp.erb
@@ -1,4 +1,4 @@
-# == Class <%= metadata.name %>::intall
+# == Class <%= metadata.name %>::install
 #
 class <%= metadata.name %>::install {
   include <%= metadata.name %>::params
