--- a/skeleton/manifests/config.pp.erb
+++ b/skeleton/manifests/config.pp.erb
@@ -3,4 +3,10 @@
 # This class is called from <%= metadata.name %>
 #
 class <%= metadata.name %>::config {
+
+  # Make this a private class
+  if $caller_module_name != $module_name {
+    fail("Use of private class ${name} by ${caller_module_name}”)
+  }
+
 }
