Fixed quoting issues

--- a/skeleton/manifests/config.pp.erb
+++ b/skeleton/manifests/config.pp.erb
@@ -6,7 +6,7 @@ class <%= metadata.name %>::config {
 
   # Make this a private class
   if $caller_module_name != $module_name {
-    fail("Use of private class ${name} by ${caller_module_name}”)
+    fail("Use of private class ${name} by ${caller_module_name}")
   }
 
 }
