--- a/skeleton/manifests/install.pp.erb
+++ b/skeleton/manifests/install.pp.erb
@@ -4,7 +4,7 @@ class <%= metadata.name %>::install {
 
   # Make this a private class
   if $caller_module_name != $module_name {
-    fail("Use of private class ${name} by ${caller_module_name}”)
+    fail("Use of private class ${name} by ${caller_module_name}")
   }
 
   package { $<%= metadata.name %>::params::package_name:
