Fixed error in basic test

--- a/skeleton/manifests/params.pp.erb
+++ b/skeleton/manifests/params.pp.erb
@@ -10,7 +10,7 @@ class <%= metadata.name %>::params {
       $service_name = '<%= metadata.name %>'
     }
     default: {
-      fail("${::operatingsystem} (${::osfamily}) not supported")
+      fail("${::osfamily} not supported")
     }
   }
 }
