--- a/skeleton/README.markdown.erb
+++ b/skeleton/README.markdown.erb
@@ -1,13 +1,11 @@
-#<%= metadata.name %>
-
 ####Table of Contents
 
 1. [Overview](#overview)
 2. [Module Description - What the module does and why it is useful](#module-description)
-3. [Setup - The basics of getting started with [Modulename]](#setup)
-    * [What [Modulename] affects](#what-[modulename]-affects)
+3. [Setup - The basics of getting started with <%= metadata.name %>](#setup)
+    * [What <%= metadata.name %> affects](#what-<%= metadata.name %>-affects)
     * [Setup requirements](#setup-requirements)
-    * [Beginning with [Modulename]](#beginning-with-[Modulename])
+    * [Beginning with <%= metadata.name %>](#beginning-with-<%= metadata.name %>)
 4. [Usage - Configuration options and additional functionality](#usage)
 5. [Reference - An under-the-hood peek at what the module is doing and how](#reference)
 5. [Limitations - OS compatibility, etc.](#limitations)
@@ -20,12 +18,12 @@ A one-maybe-two sentence summary of what the module does/what problem it solves.
 ##Module Description
 
 If applicable, this section should have a brief description of the technology the module integrates with and what that integration enables. This section should answer the questions: "What does this module *do*?" and "Why would I use it?"
-    
+
 If your module has a range of functionality (installation, configuration, management, etc.) this is the time to mention it.
 
 ##Setup
 
-###What [Modulename] affects
+###What <%= metadata.name %> affects
 
 * A list of files, packages, services, or operations that the module will alter, impact, or execute on the system it's installed on.
 * This is a great place to stick any warnings.
@@ -34,8 +32,8 @@ If your module has a range of functionality (installation, configuration, manage
 ###Setup Requirements **OPTIONAL**
 
 If your module requires anything extra before setting up (pluginsync enabled, etc.), mention it here. 
-  
-###Beginning with [Modulename]  
+
+###Beginning with <%= metadata.name %>
 
 The very basic steps needed for a user to get the module up and running. 
 
