--- a/skeleton/manifests/install.pp.erb
+++ b/skeleton/manifests/install.pp.erb
@@ -1,9 +1,8 @@
 # == Class <%= metadata.name %>::install
 #
 class <%= metadata.name %>::install {
-  include <%= metadata.name %>::params
 
-  package { $<%= metadata.name %>::params::package_name:
+  package { $<%= metadata.name %>::package_name:
     ensure => present,
   }
 }
