if defiend statement added to work around currently broken puppet module generate in puppet 3.5 or >

--- a/skeleton/Modulefile.erb
+++ b/skeleton/Modulefile.erb
@@ -4,7 +4,7 @@ source        '<%= metadata.source %>'
 author        '<%= metadata.author %>'
 license       '<%= metadata.license %>'
 summary       '<%= metadata.summary %>'
-description   '<%= metadata.description %>'
+description   '<%= defined?(metadata.description) ? metadata.description : metadata.summary %>'
 project_page  '<%= metadata.project_page %>'
 
 dependency 'puppetlabs/stdlib'
