Changed should syntax to use is_expected syntax

--- a/skeleton/spec/acceptance/class_spec.rb.erb
+++ b/skeleton/spec/acceptance/class_spec.rb.erb
@@ -15,12 +15,12 @@ describe '<%= metadata.name %> class' do
     end
 
     describe package('<%= metadata.name %>') do
-      it { should be_installed }
+      it { is_expected.to be_installed }
     end
 
     describe service('<%= metadata.name %>') do
-      it { should be_enabled }
-      it { should be_running }
+      it { is_expected.to be_enabled }
+      it { is_expected.to be_running }
     end
   end
 end
