be super pedantic about namepspacing to avoid confusion when using puppet profiles

--- a/skeleton/manifests/init.pp.erb
+++ b/skeleton/manifests/init.pp.erb
@@ -8,14 +8,14 @@
 #   Explanation of what this parameter affects and what it defaults to.
 #
 class <%= metadata.name %> (
-  $package_name = $<%= metadata.name %>::params::package_name,
-  $service_name = $<%= metadata.name %>::params::service_name,
-) inherits <%= metadata.name %>::params {
+  $package_name = $::<%= metadata.name %>::params::package_name,
+  $service_name = $::<%= metadata.name %>::params::service_name,
+) inherits ::<%= metadata.name %>::params {
 
   # validate parameters here
 
-  class { '<%= metadata.name %>::install': } ->
-  class { '<%= metadata.name %>::config': } ~>
-  class { '<%= metadata.name %>::service': } ->
-  Class['<%= metadata.name %>']
+  class { '::<%= metadata.name %>::install': } ->
+  class { '::<%= metadata.name %>::config': } ~>
+  class { '::<%= metadata.name %>::service': } ->
+  Class['::<%= metadata.name %>']
 }
