--- a/skeleton/manifests/service.pp.erb
+++ b/skeleton/manifests/service.pp.erb
@@ -5,7 +5,7 @@
 #
 class <%= metadata.name %>::service {
 
-  service { $<%= metadata.name %>::service_name:
+  service { $::<%= metadata.name %>::service_name:
     ensure     => running,
     enable     => true,
     hasstatus  => true,
