--- a/skeleton/spec/spec_helper_acceptance.rb.erb
+++ b/skeleton/spec/spec_helper_acceptance.rb.erb
@@ -1,9 +1,15 @@
 require 'beaker-rspec/spec_helper'
 require 'beaker-rspec/helpers/serverspec'
 
-hosts.each do |host|
-  # Install Puppet
-  install_puppet
+unless ENV['RS_PROVISION'] == 'no'
+  hosts.each do |host|
+    # Install Puppet
+    if host.is_pe?
+      install_pe
+    else
+      install_puppet
+    end
+  end
 end
 
 RSpec.configure do |c|
