minor cleanup of verbiage and punctuation in doc strings.

--- a/skeleton/manifests/service.pp.erb
+++ b/skeleton/manifests/service.pp.erb
@@ -1,7 +1,7 @@
 # == Class <%= metadata.name %>::service
 #
-# This class is meant to be called from <%= metadata.name %>
-# It ensure the service is running
+# This class is meant to be called from <%= metadata.name %>.
+# It ensure the service is running.
 #
 class <%= metadata.name %>::service {
 
