--- a/skeleton/manifests/install.pp.erb
+++ b/skeleton/manifests/install.pp.erb
@@ -1,5 +1,7 @@
 # == Class <%= metadata.name %>::install
 #
+# This class is called from <%= metadata.name %> for install.
+#
 class <%= metadata.name %>::install {
 
   package { $::<%= metadata.name %>::package_name:
