--- a/skeleton/manifests/params.pp.erb
+++ b/skeleton/manifests/params.pp.erb
@@ -1,7 +1,7 @@
 # == Class <%= metadata.name %>::params
 #
-# This class is meant to be called from <%= metadata.name %>
-# It sets variables according to platform
+# This class is meant to be called from <%= metadata.name %>.
+# It sets variables according to platform.
 #
 class <%= metadata.name %>::params {
   case $::osfamily {
