make subclasses private by default

--- a/skeleton/manifests/config.pp.erb
+++ b/skeleton/manifests/config.pp.erb
@@ -3,4 +3,8 @@
 # This class is called from <%= metadata.name %>
 #
 class <%= metadata.name %>::config {
+
+  unless $caller_module_name == $module_name {
+    fail("private class called from ${caller_module_name}.")
+  }
 }
