--- a/skeleton/.fixtures.yml.erb
+++ b/skeleton/.fixtures.yml.erb
@@ -1,5 +1,5 @@
 fixtures:
   repositories:
-    stdlib: "git://github.com/puppetlabs/puppetlabs-stdlib.git"
+    stdlib: "https://github.com/puppetlabs/puppetlabs-stdlib.git"
   symlinks:
     <%= metadata.name %>: "#{source_dir}"
