--- a/skeleton/metadata.json.erb
+++ b/skeleton/metadata.json.erb
@@ -12,5 +12,22 @@
       "name": "puppetlabs-stdlib",
       "version_requirement": ">= 1.0.0"
     }
+  ],
+  "operatingsystem_support": [
+    {
+      "operatingsystem": "Debian",
+      "operatingsystemrelease": [
+        "6",
+        "7"
+      ]
+    },
+    {
+      "operatingsystem": "RedHat",
+      "operatingsystemrelease": [
+        "5",
+        "6",
+        "7"
+      ]
+    }
   ]
 }
