Move error and idempotent into separate tests
It's currently hard to see if the test is failing because it errored or it was not idempotent. This splits them out into separate contexts, so it's easier to read.

--- a/skeleton/spec/acceptance/class_spec.rb.erb
+++ b/skeleton/spec/acceptance/class_spec.rb.erb
@@ -3,15 +3,16 @@ require 'spec_helper_acceptance'
 describe '<%= metadata.name %> class' do
 
   context 'default parameters' do
-    # Using puppet_apply as a helper
-    it 'should work idempotently with no errors' do
-      pp = <<-EOS
-      class { '<%= metadata.name %>': }
-      EOS
+    pp = <<-EOS
+    class { '<%= metadata.name %>': }
+    EOS
 
-      # Run it twice and test for idempotency
-      apply_manifest(pp, :catch_failures => true)
+    it 'should work with no errors' do
       apply_manifest(pp, :catch_changes  => true)
+    end
+
+    it 'should be idempotent' do
+      apply_manifest(pp, :catch_failures => true)
     end
 
     describe package('<%= metadata.name %>') do
