Update to new beaker helper for installing module

--- a/skeleton/spec/spec_helper_acceptance.rb.erb
+++ b/skeleton/spec/spec_helper_acceptance.rb.erb
@@ -21,9 +21,9 @@ RSpec.configure do |c|
 
   # Configure all nodes in nodeset
   c.before :suite do
-    # Install module and dependencies
-    puppet_module_install(:source => proj_root, :module_name => '<%= metadata.name %>')
     hosts.each do |host|
+      # Install module and dependencies
+      copy_module_to(host, :source => proj_root, :module_name => '<%= metadata.name %>')
       on host, puppet('module', 'install', 'puppetlabs-stdlib'), { :acceptable_exit_codes => [0,1] }
     end
   end
