(PDOC-16) Improve compatibility with strings
* Add .yardopts file. This tells yard to use markdown, not rdoc because we
  anticipate that this is what most people will actually want.
* Add generated .yardoc to .gitignore. Yard generates this file and you don't
  care about it.
* Convert init.pp comments to use markdown.

--- a/skeleton/manifests/init.pp.erb
+++ b/skeleton/manifests/init.pp.erb
@@ -1,11 +1,14 @@
-# == Class: <%= metadata.name %>
+# Class: <%= metadata.name %>
+# ===========================
 #
 # Full description of class <%= metadata.name %> here.
 #
-# === Parameters
+# Parameters
+# ----------
 #
-# [*sample_parameter*]
+# * `sample parameter`
 #   Explanation of what this parameter affects and what it defaults to.
+#   e.g. "Specify one or more upstream ntp servers as an array."
 #
 class <%= metadata.name %> (
   $package_name = $::<%= metadata.name %>::params::package_name,
