Add rubocop testing for native code

--- a/skeleton/spec/classes/example_spec.rb.erb
+++ b/skeleton/spec/classes/example_spec.rb.erb
@@ -9,8 +9,6 @@ describe '<%= metadata.name %>' do
         end
 
         context "<%= metadata.name %> class without any parameters" do
-          let(:params) {{ }}
-
           it { is_expected.to compile.with_all_deps }
 
           it { is_expected.to contain_class('<%= metadata.name %>::params') }
@@ -27,10 +25,12 @@ describe '<%= metadata.name %>' do
 
   context 'unsupported operating system' do
     describe '<%= metadata.name %> class without any parameters on Solaris/Nexenta' do
-      let(:facts) {{
-        :osfamily        => 'Solaris',
-        :operatingsystem => 'Nexenta',
-      }}
+      let(:facts) do
+        {
+          :osfamily        => 'Solaris',
+          :operatingsystem => 'Nexenta',
+        }
+      end
 
       it { expect { is_expected.to contain_package('<%= metadata.name %>') }.to raise_error(Puppet::Error, /Nexenta not supported/) }
     end
