Use future parser for acceptance test

--- a/skeleton/spec/acceptance/class_spec.rb.erb
+++ b/skeleton/spec/acceptance/class_spec.rb.erb
@@ -9,8 +9,8 @@ describe '<%= metadata.name %> class' do
       EOS
 
       # Run it twice and test for idempotency
-      apply_manifest(pp, :catch_failures => true)
-      apply_manifest(pp, :catch_changes  => true)
+      apply_manifest(pp, :catch_failures => true, :future_parser => true)
+      apply_manifest(pp, :catch_changes  => true, :future_parser => true)
     end
 
     describe package('<%= metadata.name %>') do
