--- a/skeleton/spec/classes/example_spec.rb.erb
+++ b/skeleton/spec/classes/example_spec.rb.erb
@@ -12,9 +12,9 @@ describe '<%= metadata.name %>' do
           it { is_expected.to compile.with_all_deps }
 
           it { is_expected.to contain_class('<%= metadata.name %>::params') }
-          it { is_expected.to contain_class('<%= metadata.name %>::install').that_comes_before('<%= metadata.name %>::config') }
+          it { is_expected.to contain_class('<%= metadata.name %>::install').that_comes_before('Class[<%= metadata.name %>::config')]' }
           it { is_expected.to contain_class('<%= metadata.name %>::config') }
-          it { is_expected.to contain_class('<%= metadata.name %>::service').that_subscribes_to('<%= metadata.name %>::config') }
+          it { is_expected.to contain_class('<%= metadata.name %>::service').that_subscribes_to('Class[<%= metadata.name %>::config')]' }
 
           it { is_expected.to contain_service('<%= metadata.name %>') }
           it { is_expected.to contain_package('<%= metadata.name %>').with_ensure('present') }
